Removing some sonar issues